# pashto-stopwords

./: .gitignore  LICENSE  README.md  data_conversion.py  pyproject.toml
src/pashto_stopwords/: __init__.py  __main__.py  pashto-stopwords.txt
