[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pashto-stopwords"
version = "1.0.0"
description = "د پښتو ژبې لومړنی معیاري بند-کلمو کارپس"
readme = "README.md"
authors = [{name = "IPashto.AI", email = "ipashto.ai@gmail.com"}]
license = "MIT"
keywords = ["pashto", "nlp", "stopwords", "ai", "پښتو"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/spinzar/pashto-stopwords"
Repository = "https://github.com/spinzar/pashto-stopwords"

[project.scripts]
pashto-clean = "pashto_stopwords.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pashto_stopwords" = ["pashto-stopwords.txt"]
